--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ lint = [
     "ruff>=0.12.2",
 ]
 test = [
-    "pytest>=8.4.1"
+    "httpx>=0.28.1",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.2.0",
 ]
 
 [tool.pytest.ini_options]
