--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.0",
     "itsdangerous>=2.2.0",
+    "pandas>=2.3.2",
     "pydantic-settings>=2.10.1",
     "requests>=2.32.5",
+    "tabulate>=0.9.0",
     "uvicorn>=0.35.0",
 ]
 
